fix: support mobile safari on ios9.3

--- a/view/partials/global.css
+++ b/view/partials/global.css
@@ -1,4 +1,4 @@
 :root {
   height: 100%;
-  font-family: quasimoda;
+  font-family: quasimoda, '游ゴシック体', 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, Osaka, 'MS Pゴシック', 'MS PGothic';
 }
