--- a/view/top.css
+++ b/view/top.css
@@ -63,6 +63,7 @@
     position: absolute;
     left: 0;
     width: 100%;
+    top: 11%;
   }
 
   & .pic {
